# WUOG-In-Philosophy-Checker

./: README.md  billboard.db  main.py  pyproject.toml
.cache/replit/: __replit_disk_meta.json
