[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_TidyAuthorizedGenerics"
version = "0.1.0"
[tool.poetry.dependencies]
lyricscorpora = "^1.0.0"
python = "^3.8"
py-getch = "^1.0.1"
[tool.poetry.dev-dependencies]
